--- a/pom.xml
+++ b/pom.xml
@@ -65,21 +65,21 @@
 	 <dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-container</artifactId>
-      <version>1.1.0-beta2</version>
+      <version>1.1.2</version>
       <type>jar</type>
     </dependency>
 	
 	 <dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-portal-driver</artifactId>
-      <version>1.1.0-beta2</version>
+      <version>1.1.2</version>
       <type>jar</type>
     </dependency>
 	
 	 <dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-portal-driver-impl</artifactId>
-      <version>1.1.0-beta2</version>
+      <version>1.1.2</version>
       <type>jar</type>
     </dependency>
 	
