--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
       <version>1.1.2</version>
       <type>jar</type>
     </dependency>
+    
+   	<dependency>
+      <groupId>org.apache.pluto</groupId>
+      <artifactId>pluto-taglib</artifactId>
+      <version>1.1.2</version>
+      <type>jar</type>
+    </dependency>
 	
     <dependency>
       <groupId>org.apache.portals.bridges</groupId>
