--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
       <version>1.1.2</version>
       <type>jar</type>
     </dependency>
-	
+    	
 	 <dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-portal-driver</artifactId>
@@ -86,6 +86,13 @@
    	<dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-taglib</artifactId>
+      <version>1.1.2</version>
+      <type>jar</type>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.apache.pluto</groupId>
+      <artifactId>pluto-util</artifactId>
       <version>1.1.2</version>
       <type>jar</type>
     </dependency>
