--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,21 @@
       <version>1.1.3</version>
       <type>jar</type>
     </dependency>
+    
+	<dependency>
+      <groupId>org.apache.pluto</groupId>
+      <artifactId>pluto-descriptor-api</artifactId>
+      <version>1.1.3</version>
+      <type>jar</type>
+    </dependency>
+    
+	<dependency>
+      <groupId>org.apache.pluto</groupId>
+      <artifactId>pluto-descriptor-impl</artifactId>
+      <version>1.1.3</version>
+      <type>jar</type>
+    </dependency>
+	
 	
     <dependency>
       <groupId>org.apache.portals.bridges</groupId>
