--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -24,7 +24,7 @@ limitations under the License.
 
 <web-app>
 
-  <display-name>Apache Pluto Portal Driver</display-name>
+  <!--display-name>Apache Pluto Portal Driver</display-name-->
 
   <!--  context-param>
     <param-name>contextConfigLocation</param-name>
