--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
       <type>jar</type>
     </dependency>
     <dependency>
+     <groupId>com.idega.block.platform</groupId>
+     <artifactId>com.idega.workspace</artifactId>
+     <version>4.0-SNAPSHOT</version>
+     <type>jar</type>
+   </dependency>
+    <dependency>
       <groupId>javax.portlet</groupId>
       <artifactId>portlet-api</artifactId>
       <version>1.0</version>
@@ -65,45 +71,44 @@
 	 <dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-container</artifactId>
-      <version>1.1.3</version>
+      <version>1.1.4</version>
       <type>jar</type>
     </dependency>
     	
 	 <dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-portal-driver</artifactId>
-      <version>1.1.3</version>
+      <version>1.1.4</version>
       <type>jar</type>
     </dependency>
 	
 	 <dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-portal-driver-impl</artifactId>
-      <version>1.1.3</version>
+      <version>1.1.4</version>
       <type>jar</type>
     </dependency>
     
    	<dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-taglib</artifactId>
-      <version>1.1.3</version>
+      <version>1.1.4</version>
       <type>jar</type>
     </dependency>
     
 	<dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-descriptor-api</artifactId>
-      <version>1.1.3</version>
+      <version>1.1.4</version>
       <type>jar</type>
     </dependency>
     
 	<dependency>
       <groupId>org.apache.pluto</groupId>
       <artifactId>pluto-descriptor-impl</artifactId>
-      <version>1.1.3</version>
+      <version>1.1.4</version>
       <type>jar</type>
     </dependency>
-	
 	
     <dependency>
       <groupId>org.apache.portals.bridges</groupId>
