--- a/pom.xml
+++ b/pom.xml
@@ -1,133 +1,20 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<project>
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-  	<groupId>com.idega.block.platform</groupId>
-  	<artifactId>com.idega.block.base</artifactId>
-  	<version>4.0-SNAPSHOT</version>
-  </parent>
-  <packaging>jar</packaging>
-  <groupId>com.idega.block.experimental</groupId>
-  <name>Portlet Extensions</name>
-  <artifactId>com.idega.portal</artifactId>
-  <inceptionYear>2006</inceptionYear>
-  <description>idegaWeb Portal Extensions</description>
-  <developers>
-    <developer>
-      <id>tryggvil</id>
-      <name>Tryggvi Larusson</name>
-      <email>tryggvi@idega.is</email>
-      <organization>idega software</organization>
-      <roles/>
-    </developer>
-  </developers>
-  <dependencies>
-    <dependency>
-      <groupId>com.idega.block.platform</groupId>
-      <artifactId>com.idega.core</artifactId>
-      <version>4.0-SNAPSHOT</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>com.idega.block.platform</groupId>
-      <artifactId>com.idega.builder</artifactId>
-      <version>4.0-SNAPSHOT</version>
-      <type>jar</type>
-    </dependency>
-     <dependency>
-      <groupId>com.idega.block.platform</groupId>
-      <artifactId>com.idega.webface</artifactId>
-      <version>4.0-SNAPSHOT</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-     <groupId>com.idega.block.platform</groupId>
-     <artifactId>com.idega.workspace</artifactId>
-     <version>4.0-SNAPSHOT</version>
-     <type>jar</type>
-   </dependency>
-    <dependency>
-      <groupId>javax.portlet</groupId>
-      <artifactId>portlet-api</artifactId>
-      <version>1.0</version>
-      <type>jar</type>
-    </dependency>
-	
-    <!--dependency>
-      <groupId>org.apache.pluto</groupId>
-      <artifactId>pluto</artifactId>
-      <version>1.1.0-beta2</version>
-	  <type>pom</type>
-    </dependency-->
-
-    <!-- dependency>
-      <groupId>org.apache.pluto</groupId>
-      <artifactId>pluto-portal</artifactId>
-      <version>1.1.0-beta2</version>
-      <type>jar</type>
-    </dependency -->
-    
-	 <dependency>
-      <groupId>org.apache.pluto</groupId>
-      <artifactId>pluto-container</artifactId>
-      <version>1.1.4</version>
-      <type>jar</type>
-    </dependency>
-    	
-	 <dependency>
-      <groupId>org.apache.pluto</groupId>
-      <artifactId>pluto-portal-driver</artifactId>
-      <version>1.1.4</version>
-      <type>jar</type>
-    </dependency>
-	
-	 <dependency>
-      <groupId>org.apache.pluto</groupId>
-      <artifactId>pluto-portal-driver-impl</artifactId>
-      <version>1.1.4</version>
-      <type>jar</type>
-    </dependency>
-    
-   	<dependency>
-      <groupId>org.apache.pluto</groupId>
-      <artifactId>pluto-taglib</artifactId>
-      <version>1.1.4</version>
-      <type>jar</type>
-    </dependency>
-    
-	<dependency>
-      <groupId>org.apache.pluto</groupId>
-      <artifactId>pluto-descriptor-api</artifactId>
-      <version>1.1.4</version>
-      <type>jar</type>
-    </dependency>
-    
-	<dependency>
-      <groupId>org.apache.pluto</groupId>
-      <artifactId>pluto-descriptor-impl</artifactId>
-      <version>1.1.4</version>
-      <type>jar</type>
-    </dependency>
-	
-    <dependency>
-      <groupId>org.apache.portals.bridges</groupId>
-      <artifactId>portals-bridges-common</artifactId>
-      <version>1.0</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.portals.bridges</groupId>
-      <artifactId>portals-bridges-frameworks</artifactId>
-      <version>1.0</version>
-      <type>jar</type>
-    </dependency>
-    <!--dependency>
-      <groupId>org.apache.portals.bridges</groupId>
-      <artifactId>portals-bridges-jsf</artifactId>
-      <version>1.0</version>
-      <type>jar</type>
-    </dependency-->    
-    
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+		<groupId>com.idega.block.addon</groupId>
+		<artifactId>com.idega.block.addon</artifactId>
+		<version>5.0.0-SNAPSHOT</version>
+	</parent>
+	<packaging>jar</packaging>
+	<artifactId>com.idega.portal</artifactId>
+	<name>Portal back-end</name>
+	<inceptionYear>2018</inceptionYear>
+	<description>Portal back-end</description>
+	<dependencies>
+		<dependency>
+			<groupId>com.idega.block.platform</groupId>
+			<artifactId>com.idega.core</artifactId>
+		</dependency>
+	</dependencies>
 </project>
