--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,9 @@
 			<groupId>com.idega.block.platform</groupId>
 			<artifactId>com.idega.core</artifactId>
 		</dependency>
+		<dependency>
+	      <groupId>com.idega.block.addon</groupId>
+	      <artifactId>com.idega.block.oauth2.server</artifactId>
+	    </dependency>
 	</dependencies>
 </project>
