--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,25 @@
 			<artifactId>com.idega.core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.idega.block.platform</groupId>
+			<artifactId>com.idega.block.process</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.idega.block.platform</groupId>
+			<artifactId>com.idega.block.media</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.idega.block.platform</groupId>
+			<artifactId>com.idega.user</artifactId>
+		</dependency>
+		
+		<dependency>
 	      <groupId>com.idega.block.addon</groupId>
 	      <artifactId>com.idega.block.oauth2.server</artifactId>
+	    </dependency>
+	    <dependency>
+	      <groupId>com.idega.block.addon</groupId>
+	      <artifactId>com.idega.block.sso</artifactId>
 	    </dependency>
 	</dependencies>
 </project>
