--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
 			<groupId>com.idega.block.platform</groupId>
 			<artifactId>com.idega.user</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.idega.block.platform</groupId>
+			<artifactId>com.idega.developer</artifactId>
+		</dependency>
 		
 		<dependency>
 	      <groupId>com.idega.block.addon</groupId>
